Remove server browser table header gap. Fix browser control SVG styling being overridden.

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -21884,7 +21884,7 @@ button.DialogButton.DialogInput_CopyAction {
 }
 
 ._2rxrVvbku0AC8Qbequ4-z9 ._2SvsKGOQeIoV8laKj5Ql5s ._2YSm1vJtLeKb9BbihsLY1F ._2_4_nZy-T2C3pHa81tGH76 ._1m0suXtV6O2fXS1Gn-nWVw {
-  gap: var(--zehn-size-spacing-xs) !important;
+  gap: 0 !important;
 }
 
 ._2rxrVvbku0AC8Qbequ4-z9 ._2SvsKGOQeIoV8laKj5Ql5s ._2YSm1vJtLeKb9BbihsLY1F ._2_4_nZy-T2C3pHa81tGH76 ._3mOBJyckqa4Zt5FoB_dBhZ {
@@ -40821,15 +40821,6 @@ span[title="Unfold line"]::after {
 
 ._26Gmfe09NRsnF7eprTZYdY ._2UTNf-Ec4o5_3LPJtc2u7M:nth-of-type(5) {
   order: 80 !important;
-}
-
-._26Gmfe09NRsnF7eprTZYdY ._2UTNf-Ec4o5_3LPJtc2u7M svg {
-  background-color: var(--zehn-color-icon-primary) !important;
-  mask-repeat: no-repeat !important;
-  mask-position: center !important;
-  mask-size: var(--zehn-size-icon-md) !important;
-  width: 100% !important;
-  height: 100% !important;
 }
 
 /* PREVIOUS BUTTON */
